--- a/minlogdpll.tex
+++ b/minlogdpll.tex
@@ -1,10 +1,28 @@
 \thesischapter{Extracting Verified Decisin Procedures in The Minlog System}
-In the following chapter we describe how 
+In the following chapter we describe how the completeness proofs from chapter \ref{} are implemented in the Minlog system and how Minlog can be used to extract programs from these proofs.  This begins with the definition of preliminary data types and operations described in chapter \ref{ } and followed by the implementation of the completeness of the DPLL proof system in Minlog. The program extracted from the completeness is described along with a description of how a unique feature of the Minlog system, namely \emph{non-computational quantifiers} have been used to remove redundant data and computations and obtain a more efficient extracted program.
 
 
 a formalisation of the DPLL proof system, as well as its soundness and completeness in the Minlog proof assistant.
 
 \section{Formalising Preliminaries in the Minlog System}
+We have tried to stay faithful to the definition of the fundemental data types described in chapter \ref{} and to this end have defined a number of data types as algebras in Minlog, including the variable,literal, valuation, clause and formula. The variable is defined using the command $\mathbf{add-alg}$ which adds an algebra named "variable " with one constructor "Variable" which takes a natural number and returns a variable.
+\begin{lstlisting}[caption = "Definition of a variable in Minlog"]
+(add-alg "variable" '("Variable" "nat => variable"))
+\end{lstlisting}
+The literal is also defined as an algebra but has two constructors "Pos" and "Neg" which are used to construct positive and negative literals respectively from a variable.
+\begin{lstlisting}[caption = "Definition of a literal in Minlog"]
+(add-alg "lit" '("Pos" "variable => lit")
+         '("Neg" "variable => lit"))
+\end{lstlisting}
+
+\subsection*{Sets: Clauses, Valuations and Formulae}
+There is currently no built in data type for sets in the Minlog system. For our work we have implemented sets as lists in the Minlog system, while this is not the most mathematically pure way of implementing these data types it has enabled us to make further effciency improvements. The clauses have been implementated in such a way that the literals contained with in are partitioned into positive and negative literals and then ordered within each of these partitions by variable number.
+
+
+
+
+
+
 
 \section{The Soundness of DPLL}
 
