--- a/minlogdpll.tex
+++ b/minlogdpll.tex
@@ -15,10 +15,22 @@ The literal is also defined as an algebra but has two constructors "Pos" and "Ne
          '("Neg" "variable => lit"))
 \end{lstlisting}
 
+We have defined an operation $\mathbf{opposite}$ which computes 
+
+\begin{lstlisting}
+(add-program-constant "opposite" (mk-arrow (py "lit") (py "lit")) 1)
+(add-computation-rule (pt "opposite (Pos v)") (pt "Neg v"))
+(add-computation-rule (pt "opposite (Neg v)") (pt "Pos v"))
+\end{lstlisting}
+
 \subsection*{Sets: Clauses, Valuations and Formulae}
-There is currently no built in data type for sets in the Minlog system. For our work we have implemented sets as lists in the Minlog system, while this is not the most mathematically pure way of implementing these data types it has enabled us to make further effciency improvements. The clauses have been implementated in such a way that the literals contained with in are partitioned into positive and negative literals and then ordered within each of these partitions by variable number.
+There is currently no built in data type for sets in the Minlog system. For our work we have implemented sets as lists in the Minlog system, while this is not the most mathematically pure way of implementing these data types it has enabled us to make further effciency improvements. The clauses have been implementated in such a way that the literals contained with in are partitioned into positive and negative literals and then ordered within each of these partitions by variable number. The positive literals occur first followed by the negative and the variables are sorted from low to high numbers. We do not place any partitionings or ordering on either the formulae or the valuations, they are built using unsorted lists.
 
-
+\begin{lstlisting}
+(add-alg "cla"  '( "CC" "list lit => cla"))
+(add-alg "for" '( "CF" "list cla => for"))
+(add-alg "valu" '( "ConsVal" "list lit => valu") )
+\end{lstlisting}
 
 
 
