--- a/lit.bib
+++ b/lit.bib
@@ -255,7 +255,7 @@
 	and {C}oalgebras},
   booktitle = {CALCO-Tools 2011},
   year = {2011},
-  editor = {Corradini, A. and Klin, B. and  C\^{\i}rstea, C.},
+  editor = {Corradini, A. and Klin, B. and C\^{\i}rstea, C.},
   volume = {6859},
   series = {Lecture Notes in Computer Science},
   pages = {393--399},
@@ -1112,6 +1112,20 @@
   author = {McCune, W. },
   title = {Prover9 and {M}ace4},
   url = {http://www.cs.unm.edu/~mccune/prover9}
+}
+
+@INPROCEEDINGS{JM98,
+  author = {Meseguer, J.},
+  title = {Membership algebra as a logical framework for equational specification},
+  booktitle = {Recent Trends in Algebraic Development Techniques},
+  year = {1998},
+  editor = {Presicce, F. P.},
+  volume = {1376},
+  series = {Lecture {N}otes in {C}omputer {S}cience},
+  pages = {18--61},
+  publisher = {Springer Berlin / Heidelberg},
+  owner = {andylawrence},
+  timestamp = {2014.07.07}
 }
 
 @MISC{MH99,
